@@ -1,1 +1,1 @@
-#define SERIALNUM "20010717_5"
+#define SERIALNUM "20010717_7"
