@@ -20,7 +20,7 @@
  *   along with this program; if not, write to the Free Software
  *   Foundation, Inc., 675 Mass Ave, Cambridge, MA 02139, USA.
  *
- *   $Id: m_oper.c,v 1.10 2001/07/18 02:15:27 lusky Exp $
+ *   $Id: m_oper.c,v 1.11 2001/07/18 02:20:43 lusky Exp $
  */
 
 #include "m_commands.h"
@@ -163,7 +163,7 @@ int m_oper(struct Client *cptr, struct Client *sptr, int parc, char *parv[])
 
   /* passwd may be NULL pointer. Head it off at the pass... */
   if (password && *aconf->passwd)
-    encr = crypt(password, aconf->passwd);
+    encr = (char *)crypt(password, aconf->passwd);
   else
     encr = "";
 #else
