@@ -1,3 +1,12 @@
+*** 20010717_7 by lusky
+- check for crypt.h
+
+
+*** 20010717_6 by bill
+
+ - more warnings being fixed
+
+
 *** 20010717_5 by lusky
 - more warning fixes
 
